"Added state to track form submission button disablement and updated CSS to style disabled button"

--- a/src/form.css
+++ b/src/form.css
@@ -16,3 +16,7 @@
     outline: none;
     border: none;
 }
+.form button:disabled{
+    background-color: rgba(44, 44, 44, 0.329);
+    color: rgba(255, 255, 255, 0.253);
+}
